<resources>
    <string name="app_name">ASUI Scanner</string>
    <string name="logo_1c_1_8_3">1С 8.3</string>
    <string name="logo_barcode_scanner">Barcode Scanner</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tab_label_history">History</string>
    <string name="tab_label_scanner">Scanner</string>
    <string name="tab_label_settings">Settings</string>
    <string name="text_from_scanner">From scanner</string>
    <string name="text_barcode">Barcode</string>
    <string name="text_read_barcode">Read barcode</string>
    <string name="scanning_cancelled">Cancelled</string>
    <string name="scanning_not_permissions">Cancelled due to missing camera permission</string>
    <string name="text_test_connection">Test Connection</string>
    <string name="text_header_service_1c">Service 1C</string>
    <string name="hint_settings_host_service_1c">Host Service 1C</string>
    <string name="hint_settings_login_service_1c">Login Service 1C</string>
    <string name="hint_settings_password_service_1c">Password Service 1C</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="status_test_connection_success">Status test: Success</string>
    <string name="status_test_connection_failed">Status test: Failed</string>
    <string name="set_default_settings">Set default Settings 1C</string>
    <string name="settings_saved">Settings saved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_inventory_number">Inventory number:</string>
    <string name="label_barcode">Barcode:</string>
    <string name="label_serial_number">Serial Number:</string>
    <string name="label_type_asset">Type Asset:</string>
    <string name="label_count">Count:</string>
    <string name="label_state_info">Current state</string>
    <string name="label_operation_date">Operation date:</string>
    <string name="label_organization">Organization:</string>
    <string name="label_store">Store:</string>
    <string name="label_current_state">Current State:</string>
    <string name="label_other_info">Other Information</string>
    <string name="label_invent_date">Invent Date:</string>
    <string name="label_exist">Exist:</string>
    <string name="label_in_asui">In ASUI:</string>
    <string name="barcode_empty">Barcode is empty</string>
    <string name="title_clear_history">Clear History</string>
    <string name="text_keep_history_scanning">Keep History Scanning</string>
    <string name="text_other_settings">Other Settings</string>
    <string name="text_date_time_scan">Date/Time Scan:</string>
    <string name="label_information">Information</string>
    <string name="error_empty_login">Login is empty</string>
    <string name="error_empty_host">Host is empty</string>
    <string name="text_true">Да</string>
    <string name="text_false">Нет</string>
    <string name="text_off">off</string>
    <string name="text_on">on</string>
    <string name="text_empty_connection_settings">Connection settings is empty</string>
    <string name="empty_host_scanner">Host not filled. Go to page Settings and configure the 1C service connection</string>
</resources>