<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/tabsFragment">
    <fragment
        android:id="@+id/tabsFragment"
        android:name="com.ivkornienko.asui.scanner.TabsFragment"
        android:label="fragment_tabs"
        tools:layout="@layout/fragment_tabs" >
        <action
            android:id="@+id/action_tabsFragment_to_scannerFragment2"
            app:destination="@id/scannerFragment" />
        <action
            android:id="@+id/action_tabsFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_tabsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.ivkornienko.asui.scanner.ScannerFragment"
        android:label="@string/tab_label_scanner"
        tools:layout="@layout/fragment_scanner" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.ivkornienko.asui.scanner.HistoryFragment"
        android:label="@string/tab_label_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ivkornienko.asui.scanner.SettingsFragment"
        android:label="@string/tab_label_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>